public/stylesheets/style.css
html, body {
    min-height: 100%;
    margin: 0;
    padding: 0;
    overflow: visible;
    background: #000;

    font: lighter 20px 'Segoe UI', 'Gill Sans', sans-serif;
    color: #fff;
}

.Title {
    padding: 50px 100px;
    white-space: nowrap;
}

.Title h1 {
    margin: 0;
    padding: 0;
    font-weight: 100;
    font-size: 120px;
    color: #ddd;
}

.Title h1 span {
    color: #666;
}

body {
    background: -moz-linear-gradient(top, #4a4a4a 0%, #000 500px); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4a4a4a), color-stop(500px, #000)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #4a4a4a 0%, #000 500px); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #4a4a4a 0%, #000 500px); /* Opera11.10+ */
    background: -ms-linear-gradient(top, #4a4a4a 0%, #000 500px); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#4a4a4a', endColorstr = '#000', GradientType = 0); /* IE6-9 */
    background: linear-gradient(top, #4a4a4a 0%, #000 500px); /* W3C */
}

.Wall {
    padding: 10px 50px 100px 100px ;
    margin: 0;
    overflow: auto;
}

.Wall .BrickContainer {
    display: block;
    float: left;
    margin: 5px;
    position: relative;
    overflow: visible;
}

.Wall .Brick {
    width: 200px;
    height: 200px;
}

.Wall .Brick .Face {
    width: 180px;
    height: 180px;
    padding: 10px;
}

.Wall .Brick .GroupName {
    font-size: 18px;
    margin-bottom: 10px;
}

.Wall .Brick .Text {
    font-size: 36px;
    line-height: 41px;
    height: 85px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.Wall .Brick .Status {
    position: absolute;
    bottom: 10px;
    left: 10px;
    font-size: 16px;
    line-height: 18px;
    -webkit-backface-visibility: hidden;
}

.Wall .Brick .Status .Timestamp,
.Wall .Brick .Status .Author {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
    width: 180px;
    height: 20px;
}

.Wall .Brick .Avatar {
    position: absolute;
    top: 0;
    left: 0;
    -webkit-backface-visibility: hidden;
    opacity: 0.7;
}

.Wall .Brick .Impact {
    position: absolute;
    top: 0;
    right: -1px;
    font-size: 36px;
    line-height: 26px;
    -webkit-backface-visibility: hidden;
    opacity: 0.5;
}
.Wall .Brick .Impact span {
    font-size: 16px;
    line-height: 18px;
}

.Wall .Brick .Description,
.Wall .Brick .DescriptionFooter {
    width: 180px;
    position: absolute;
    left: 0;
    -webkit-backface-visibility: hidden;
    padding: 10px;
    font-weight: normal;
    font-size: 20px;
    line-height: 23px;
    text-shadow: #000 1px 1px 1px;
    text-overflow: ellipsis;
    overflow: hidden;
}

.Wall .Brick .Description {
    top: 0;
    height: 105px;
}

.Wall .Brick .DescriptionFooter {
    bottom: 0;
}

.Wall .Brick .DescriptionFooter a {
    font-size: 16px;
    line-height: 18px;
    white-space: nowrap;
    color: #fff;
}


.BrickContainer {
    position: relative;
    -webkit-perspective: 1000;
    z-index: 1;
}

.Brick {
    width: 100%;
    height: 100%;
    -webkit-transform-style: preserve-3d;
    -webkit-transition: -webkit-transform 1s;
}
.BrickContainer:hover .Brick,
.BrickContainer.Pinned .Brick {
    -webkit-transform: rotateY(180deg);
}

.BrickContainer:hover .Front {
    display: none;
}
@media all and (-webkit-transform-3d) {
    .BrickContainer:hover .Front,
    .BrickContainer.Pinned .Front {
        display: block;
    }
}


.Face {
    position: absolute;
    width: 180px;
    height: 180px;
    -webkit-backface-visibility: hidden;
    background: #000;
    z-index: 1;
}

.Face.Back {
    display: block;
    -webkit-transform: rotateY(180deg);
    color: white;
    z-index: -1;
}

.MetroColors {
    background: #ff0097;
    background: #a200ff;
    background: #ff0097;
    background: #e51400;
    background: #00aba9; /*_*/
    background: #8cbf26; /*_*/
    background: #996600; /*_*/
    background: #f09609; /*_*/
    background: #1ba1e2; /*_*/
    background: #339933; /*_*/
}

.Wall .Brick .Front               { background: #996600; }

.Wall .Brick .GroupCcco           { background: #a200ff; }
.Wall .Brick .GroupCommitwall     { background: #000000; }
.Wall .Brick .GroupStandup        { background: #000000; }
.Wall .Brick .GroupRkm            { background: #f09609; }
.Wall .Brick .GroupKyck           { background: #339933; }
.Wall .Brick .GroupHealtheme      { background: #1ba1e2; }
.Wall .Brick .GroupTykoon         { background: #00aba9; }
.Wall .Brick .GroupVrb2           { background: #8cbf26; }

.Wall .Brick .GroupCloudlogistics { background: #00699c; }

